.provarCaches/00D410000011HE0EAM/objects/rstk__supitemchg__c.object
<CustomObject>
    <description>supitemchg__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__supitemchg_supitem__r.rstk__externalid__c + TEXT(rstk__supitemchg_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__supitemchg_supitem__r.Name + &apos; (&apos; +  TEXT(rstk__supitemchg_datereq__c) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox.  Checked indicates the requested change has been accepted.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_approvedby__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Defaults to user who approved this change when &apos;Approve&apos; button is clicked.</inlineHelpText>
        <label>Approved By</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Supplier Part Change Requests</relationshipLabel>
        <relationshipName>supitemchgapprs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_approvhold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved but Held Pending Other Division</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_dateappr__c</fullName>
        <inlineHelpText>Date this change was approved.  Defaults to today&apos;s date, and auto-fills when &apos;Approve&apos; button is clicked.</inlineHelpText>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_datereq__c</fullName>
        <inlineHelpText>Display.  Date Supplier requested this change.</inlineHelpText>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_field10curval__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Field 10 Current Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_field10label__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Field 10 Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_field10name__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Field 10 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_field10newval__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Field 10 New Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_field11curval__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Field 11 Current Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_field11label__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Field 11 Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_field11name__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Field 11 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_field11newval__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Field 11 New Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_field12curval__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Field 12 Current Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_field12label__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Field 12 Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_field12name__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Field 12 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_field12newval__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Field 12 New Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_requestedby__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Name of person requesting the change.  Defaults to Supplier User who created this record.  Display only.</inlineHelpText>
        <label>Change Requested By</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Supplier Part Change Requests (Change Requested By)</relationshipLabel>
        <relationshipName>supitemchgreqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_seq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Change Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__supitemchg_supitem__c</fullName>
        <inlineHelpText>Supplier&apos;s part number for which a change is requested.</inlineHelpText>
        <label>Supplier Part</label>
        <referenceTo>rstk__supitem__c</referenceTo>
        <relationshipLabel>Supplier Part Change Requests</relationshipLabel>
        <relationshipName>supitemchgs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Supplier Part Change Request</label>
    <listViews>
        <fullName>rstk__Supplier_Part_Change_Requests</fullName>
        <columns>NAME</columns>
        <columns>rstk__supitemchg_supitem__c</columns>
        <columns>rstk__supitemchg_seq__c</columns>
        <columns>rstk__supitemchg_datereq__c</columns>
        <columns>rstk__supitemchg_requestedby__c</columns>
        <columns>rstk__supitemchg_approved__c</columns>
        <columns>rstk__supitemchg_dateappr__c</columns>
        <columns>rstk__supitemchg_approvedby__c</columns>
        <filterScope>Everything</filterScope>
        <label>Supplier Part Change Requests</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Part Change Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>